# Local-Doc

./: .gitignore  LICENSE  README.md  biome.json  install.sh  package.json  tsconfig.json
.cursor/: mcp.json
.github/workflows/: release.yml
native/model2vec-cli/: Cargo.toml
native/model2vec-cli/src/: main.rs
prisma/: schema.prisma
prisma/migrations/20260721120000_init/: migration.sql
scripts/: build.ts
scripts/stubs/: empty.ts
src/: version.ts
src/chunk/: chonkie-wasm.ts  index.ts
src/cli/: context.ts  embed-chonkie.ts  embed-libsql.ts  embed-model2vec.ts  embed-onnx.generated.ts  index.compile.ts  index.ts
src/config/: load.ts  schema.ts
src/crawl/: discover.ts  fetch.ts  urls.ts
src/db/: client.ts  documents.ts  migrate.ts  migrations.ts  retry.ts  sources.ts  vector-index.ts
src/embed/: index.ts  model2vec-bin.ts  model2vec-weights.ts  onnx-natives.ts
src/extract/: html.ts  openapi.ts  sanitize.ts
src/mcp/: server.ts
src/pack/: format.ts
src/playwright/: browser.ts
src/search/: embed-text.ts  filters.ts  fts-query.ts  hybrid.ts  rerank.ts
src/skills/: content.ts  install.ts
src/sources/: folder.ts  github.ts  ingest.ts  reembed.ts
src/tui/: app.tsx
src/util/: api-key.ts  clipboard.ts  copy-shortcut.ts  estimate-tokens.ts  file-uri.ts  hash.ts  log.ts  openai-url.ts  paths.ts  proxy.ts
test/: chunk-structure.test.ts  copy-shortcut.test.ts  embeddings-config.test.ts  extract.test.ts  filters.test.ts  fts-query.test.ts  migrations.test.ts  openai-url.test.ts  openapi.test.ts  pack.test.ts  security-hardening.test.ts
(+14 files in other folders)
