[package]
name = "localdoc-model2vec"
version = "0.1.0"
edition = "2021"
description = "Model2Vec embedding sidecar for localdoc"
license = "MIT"

[[bin]]
name = "localdoc-model2vec"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
model2vec = "0.3.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
